reworked exterior ui, loading bar, updated icons, added title, optimized pagination + adding/wishlisting
